--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 /* GLOBAL RULES */
 
-/* @font-face {
+@font-face {
   font-family: "Font";
-  src: url("Font.eot");
-  src: url("Font.eot?#iefix") format("embedded-opentype"),
-    url("Font.woff2") format("woff2"), url("Font.woff") format("woff"),
-    url("Font.ttf") format("truetype"), url("Font.svg#Font") format("svg");
+  src: url("./assets/fonts/Font.eot");
+  src: url("./assets/fonts/Font.eot?#iefix") format("embedded-opentype"),
+    url("./assets/fonts/Font.woff2") format("woff2"),
+    url("./assets/fonts/Font.woff") format("woff"),
+    url("./assets/fonts/Font.ttf") format("truetype"),
+    url("./assets/fonts/Font.svg#Font") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -13,19 +15,22 @@
 
 @font-face {
   font-family: "Font";
-  src: url("Font_1.eot");
-  src: url("Font_1.eot?#iefix") format("embedded-opentype"),
-    url("Font_1.woff2") format("woff2"), url("Font_1.woff") format("woff"),
-    url("Font_1.ttf") format("truetype"), url("Font_1.svg#Font") format("svg");
+  src: url("./assets/fonts/Font_1.eot");
+  src: url("./assets/fonts/Font_1.eot?#iefix") format("embedded-opentype"),
+    url("./assets/fonts/Font_1.woff2") format("woff2"),
+    url("./assets/fonts/Font_1.woff") format("woff"),
+    url("./assets/fonts/Font_1.ttf") format("truetype"),
+    url("./assets/fonts/Font_1.svg#Font") format("svg");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
-} */
+}
 
 /* HOME */
 
 * {
   box-sizing: border-box;
+  font-family: "font";
 }
 
 /* Header */
